--- a/soup/Soup.vcxproj
+++ b/soup/Soup.vcxproj
@@ -745,6 +745,7 @@
     <ClInclude Include="Hashmap.hpp" />
     <ClInclude Include="HidReportDescriptor.hpp" />
     <ClInclude Include="HidScancode.hpp" />
+    <ClInclude Include="HidUsage.hpp" />
     <ClInclude Include="hwGamepad.hpp" />
     <ClInclude Include="Hwid.hpp" />
     <ClInclude Include="IpcSocket.hpp" />
