--- a/soup/Soup.vcxproj
+++ b/soup/Soup.vcxproj
@@ -833,6 +833,7 @@
     <ClInclude Include="RegexTransitionsVector.hpp" />
     <ClInclude Include="RegexWordBoundaryConstraint.hpp" />
     <ClInclude Include="RegexWordCharConstraint.hpp" />
+    <ClInclude Include="ResolveIpAddrTask.hpp" />
     <ClInclude Include="ResponseCurve.hpp" />
     <ClInclude Include="SelfDeletingThread.hpp" />
     <ClInclude Include="ServerServiceUdp.hpp" />
@@ -1345,6 +1346,7 @@
     <ClCompile Include="Reader.cpp" />
     <ClCompile Include="Regex.cpp" />
     <ClCompile Include="RegexGroup.cpp" />
+    <ClCompile Include="ResolveIpAddrTask.cpp" />
     <ClCompile Include="ResponseCurve.cpp" />
     <ClCompile Include="rflParser.cpp" />
     <ClCompile Include="Rgba.cpp" />
