--- a/soup/Soup.vcxproj.filters
+++ b/soup/Soup.vcxproj.filters
@@ -2459,6 +2459,9 @@
     <ClCompile Include="SocketAddr.cpp">
       <Filter>net</Filter>
     </ClCompile>
+    <ClCompile Include="alloc.cpp">
+      <Filter>mem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="os">
