--- a/soup/Soup.vcxproj.filters
+++ b/soup/Soup.vcxproj.filters
@@ -2489,6 +2489,9 @@
     <ClCompile Include="DetourHookBase.cpp">
       <Filter>util\hooks</Filter>
     </ClCompile>
+    <ClCompile Include="CpuInfo_toString.cpp">
+      <Filter>cpu</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="os">
