--- a/soup/Soup.vcxproj
+++ b/soup/Soup.vcxproj
@@ -846,6 +846,7 @@
     <ClInclude Include="sha256_intrin.hpp" />
     <ClInclude Include="sha384.hpp" />
     <ClInclude Include="sha512.hpp" />
+    <ClInclude Include="Spinlock.hpp" />
     <ClInclude Include="StringParser.hpp" />
     <ClInclude Include="StringPool.hpp" />
     <ClInclude Include="Sudoku.hpp" />
